--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
@@ -1,5 +1,14 @@
-/* 
+
+
+
+
+
+
 @font-face {
+    font-family: "Circular";
+    src: url(fonts/circular-std-medium-500.ttf);
+}
+/* @font-face {
     font-family: "Oswald";
     src: url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
     font-weight: 400;
@@ -11,7 +20,6 @@
 
 body{
     margin: 0;
-    height: 200vh;
 }
 
 
@@ -30,6 +38,10 @@ nav{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: flex-end;
+
+    position: relative;
+
 }
 
 .logo{
@@ -69,7 +81,7 @@ nav{
     display: block;
     white-space: nowrap;
     cursor: pointer;
-    color: #1d1d1d;
+    color: #1a1a1a;
     text-decoration: none;
     background: none;
     position: relative;
@@ -85,13 +97,13 @@ nav{
     text-align: center;
 }
 
-
 .content-sepira:hover>.sepira{
     display: none;
 }
 
 .content-sepira:hover>.aparece,
-.content-sepira:hover>.apareceII{
+.content-sepira:hover>.apareceII,
+.content-sepira:hover>.apareceIII{
     display: block;
 }
 
@@ -99,6 +111,118 @@ nav{
     width: 154px;
     display: none;
     text-align: center;
+}
+
+.apareceIII{
+    width: 133px;
+    display: none;
+    text-align: center;
+}
+
+
+
+/* Empiza .cajaFondo1 */
+
+.cajaFondo1{
+    width: 100%;
+    height: 200vh;
+    background-color: #1a1a1a;
+}
+
+.contenido{
+    width: 100%;
+    padding: 40px;
+    gap: 40px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.container-card{
+    width: 13%;
+    padding: 56px;
+    padding-bottom: 10px;
+}
+/* @font-face {
+    font-family: "Futura";
+    src: url(futur.ttf);
+} */
+
+.card{
+    /* margin-top: 40px; */
+    /* width: 8.33%; */
+    /* transform: translate(42px , -12px); */
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+
+.card-text{
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    padding: 25px;
+    padding-top: 60px;
+    text-align: center;
+    background-color: #272727;
+    transform: translate(42px , -12px);
+    box-shadow: 0px 0px 20px 10px rgb(0 0 0 / 41%);
+    BORDER-RADIUS: 19%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    transition-duration: 0.6s;
+    aspect-ratio: 331∶484;
+}
+
+.card-text>p{
+    margin: 0;
+    font-family: "Circular";
+    font-size: 15px;
+    letter-spacing: 0.1em;
+    color: #e7e7e7;
+
+}
+
+.imagen{
+    /* padding: 0px 17px 17px; */
+    text-align: center;
+    align-items: center;
+    transition-duration: 0.6s;
+    line-height: 0;
+}
+
+.imagen img{
+    width: 100%;
+    text-align: center;
+    box-shadow: 0px 0px 20px 10px rgb(0 0 0 / 41%);
+    BORDER-RADIUS: 19%;
+    line-height: 0;
+} 
+
+.cajaDetras{
+    display: none;
+}
+
+.imagen2{
+    width: 15%;
+    position: absolute;
+    top: 884px;
+    left: 891px;
+    box-shadow: 2px 1px 17px 6px rgb(0 0 0 / 81%);
+}
+
+.card:hover>.imagen{
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+}
+
+
+.card:hover .card-text{
+    transform: rotateY(0deg);
 }
 
 
