--- a/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
+++ b/HTML y CSS      Jorge Gómez/Jorge_Gómez Trazos/Portfolio/estilo.css
@@ -38,9 +38,10 @@ nav{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: center;
 
     position: relative;
+    background-color: #111111;
 
 }
 
@@ -76,12 +77,12 @@ nav{
 
 .menu-style{
     /* margin: 0 15px;  */
-    font-size: 16px;
+    font-size: 18px;
     letter-spacing: 0.07em;
     display: block;
     white-space: nowrap;
     cursor: pointer;
-    color: #1a1a1a;
+    color: #dedede;
     text-decoration: none;
     background: none;
     position: relative;
@@ -92,7 +93,7 @@ nav{
 }
 
 .aparece{
-    width: 177px;
+    width: 199px;
     display: none;
     text-align: center;
 }
@@ -108,20 +109,22 @@ nav{
 }
 
 .apareceII{
-    width: 154px;
+    width: 173px;
     display: none;
     text-align: center;
 }
 
 .apareceIII{
-    width: 133px;
+    width: 150px;
     display: none;
     text-align: center;
 }
 
 
 
-/* Empiza .cajaFondo1 */
+
+
+/* Empieza .cajaFondo1 */
 
 .cajaFondo1{
     width: 100%;
@@ -131,8 +134,9 @@ nav{
 
 .contenido{
     width: 100%;
-    padding: 40px;
+    padding: 30px;
     gap: 40px;
+    background-color: white;
 
     display: flex;
     flex-direction: row;
@@ -140,14 +144,13 @@ nav{
     justify-content: center;
 }
 .container-card{
-    width: 13%;
-    padding: 56px;
-    padding-bottom: 10px;
+    width: 14%;
+    min-width: 14%;
+    padding: 60px;
+
+    /* Poner más tarde */
+    /* padding-bottom: 0px; */
 }
-/* @font-face {
-    font-family: "Futura";
-    src: url(futur.ttf);
-} */
 
 .card{
     /* margin-top: 40px; */
@@ -162,13 +165,39 @@ nav{
     width: 100%;
     height: 100%;
     margin: auto;
-    padding: 25px;
-    padding-top: 60px;
+    padding: 5px;
+
     text-align: center;
-    background-color: #272727;
+    background-color: #292929;
     transform: translate(42px , -12px);
-    box-shadow: 0px 0px 20px 10px rgb(0 0 0 / 41%);
+    box-shadow: 0px 0px 20px 1px rgb(0 0 0 / 41%);
     BORDER-RADIUS: 19%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    transition-duration: 0.6s;
+    aspect-ratio: 331∶484;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.card-text-word, .card-text-4D{
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    padding: 5px;
+    text-align: center;
+    background-color: #292929;
+    transform: translate(42px , -12px);
+    box-shadow: 0px 0px 20px 1px rgb(0 0 0 / 41%);
+    BORDER-RADIUS: 50%;
     position: absolute;
     top: 0;
     left: 0;
@@ -176,12 +205,17 @@ nav{
     backface-visibility: hidden;
     transition-duration: 0.6s;
     aspect-ratio: 331∶484;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.card-text>p{
+.card-text>p,
+.card-text-word>p,
+.card-text-4D{
     margin: 0;
     font-family: "Circular";
-    font-size: 15px;
+    font-size: 14px;
     letter-spacing: 0.1em;
     color: #e7e7e7;
 
@@ -195,24 +229,29 @@ nav{
     line-height: 0;
 }
 
+
 .imagen img{
     width: 100%;
     text-align: center;
-    box-shadow: 0px 0px 20px 10px rgb(0 0 0 / 41%);
+    box-shadow: 0px 0px 20px 1px rgb(0 0 0 / 41%);
     BORDER-RADIUS: 19%;
     line-height: 0;
 } 
 
-.cajaDetras{
-    display: none;
+#img-visual{
+    aspect-ratio: 0.99;
 }
 
-.imagen2{
-    width: 15%;
-    position: absolute;
-    top: 884px;
-    left: 891px;
-    box-shadow: 2px 1px 17px 6px rgb(0 0 0 / 81%);
+#img-word, #img-4D{
+    width: 100%;
+    text-align: center;
+    box-shadow: 0px 0px 20px 4px rgb(0 0 0);
+    BORDER-RADIUS: 53%;
+    line-height: 0;
+}
+
+.cajaDetras{
+    display: none;
 }
 
 .card:hover>.imagen{
@@ -221,15 +260,39 @@ nav{
 }
 
 
-.card:hover .card-text{
+.card:hover .card-text,
+.card:hover .card-text-word,
+.card:hover .card-text-4D{
     transform: rotateY(0deg);
 }
 
 
 
 
+/* Empieza cajaFodno2*/
 
+.cajaFondo2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 50vh;
+}
 
+#poster{
+    height: 200px;
+    width: 300px;
+    margin-top: 30px;
+    transition: box-shadow .1s transform;
+
+    background-image: url(img/we.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#poster:hover{
+    box-shadow: 0px 0px 50px rgba(0,0,0,1);
+}
 
 
 /* .menu-container{
